# nora

./: .gitmodules  README.md  meson.build
nora/: desktop.c  desktop.h  input.c  input.h  main.c  output.c  output.h  server.c  server.h  tree.c  tree.h  view.c  view.h
nora/desktop/: manager.c  manager.h
protocol/: meson.build  nora-desktop-management-unstable-v1.xml
proxies/: desktop-management-methods.c  desktop-management.c  desktop-management.h  main.c  meson.build  output-management-getters.c  output-management.c  output-management.h  proxy.c  proxy.h
